<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_bmi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.kacper.bmi.BMI">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/headline" android:text="@string/headline"
            android:textSize="20sp" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <TextView
            android:text="@string/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="63dp" android:id="@+id/weight" android:textSize="16sp"
            android:layout_below="@+id/headline" android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" android:layout_marginLeft="14dp" android:layout_marginStart="14dp"/>
    <TextView
            android:text="@string/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="53dp" android:id="@+id/height" android:layout_below="@+id/weight"
            android:layout_alignRight="@+id/weight" android:layout_alignEnd="@+id/weight" android:textSize="16sp"/>

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="3"
        android:inputType="number|numberDecimal"
        android:layout_alignBaseline="@+id/weight"
        android:layout_alignBottom="@+id/weight"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/calculateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editHeight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:background="@android:color/holo_green_light"
        android:onClick="caluclateButttonFire"
        android:text="@string/calculateBtn"
        android:visibility="visible" />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editHeight"
            android:maxLength="3"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:layout_alignBaseline="@+id/height"
        android:layout_alignBottom="@+id/height"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calculateBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/result"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/bmiDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/result"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/bmiDesc"
        android:textSize="16sp" />
</RelativeLayout>
